After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 430782 - gtkmm-2.10.9 does not compile
gtkmm-2.10.9 does not compile
Status: RESOLVED FIXED
Product: gtkmm
Classification: Bindings
Component: general
2.10.x
Other Linux
: Normal normal
: ---
Assigned To: gtkmm-forge
gtkmm-forge
Depends on:
Blocks:
 
 
Reported: 2007-04-17 20:14 UTC by Joseph Sacco
Modified: 2007-04-24 14:12 UTC
See Also:
GNOME target: ---
GNOME version: 2.17/2.18



Description Joseph Sacco 2007-04-17 20:14:32 UTC
g++-4.1.1 is unhappy about something... [see below].

-Joseph

====================================================================
/usr/local/src/GARNOME/Devel/garnome-trunk/include/glibmm-2.4/glibmm/objectbase.h: In static member function 'static gboolean Atk::Action_Class::do_action_vfunc_callback(AtkAction*, gint)':
/usr/local/src/GARNOME/Devel/garnome-trunk/include/glibmm-2.4/glibmm/objectbase.h:149: error: 'bool Glib::ObjectBase::is_derived_() const' is protected
action.cc:100: error: within this context
/usr/local/src/GARNOME/Devel/garnome-trunk/include/glibmm-2.4/glibmm/objectbase.h: In static member function 'static gint Atk::Action_Class::get_n_actions_vfunc_callback(AtkAction*)':
/usr/local/src/GARNOME/Devel/garnome-trunk/include/glibmm-2.4/glibmm/objectbase.h:149: error: 'bool Glib::ObjectBase::is_derived_() const' is protected
action.cc:145: error: within this context
/usr/local/src/GARNOME/Devel/garnome-trunk/include/glibmm-2.4/glibmm/objectbase.h: In static member function 'static const gchar* Atk::Action_Class::get_description_vfunc_callback(AtkAction*, gint)':
/usr/local/src/GARNOME/Devel/garnome-trunk/include/glibmm-2.4/glibmm/objectbase.h:149: error: 'bool Glib::ObjectBase::is_derived_() const' is protected
action.cc:189: error: within this context
/usr/local/src/GARNOME/Devel/garnome-trunk/include/glibmm-2.4/glibmm/objectbase.h: In static member function 'static const gchar* Atk::Action_Class::get_name_vfunc_callback(AtkAction*, gint)':
/usr/local/src/GARNOME/Devel/garnome-trunk/include/glibmm-2.4/glibmm/objectbase.h:149: error: 'bool Glib::ObjectBase::is_derived_() const' is protected
action.cc:234: error: within this context
/usr/local/src/GARNOME/Devel/garnome-trunk/include/glibmm-2.4/glibmm/objectbase.h: In static member function 'static const gchar* Atk::Action_Class::get_keybinding_vfunc_callback(AtkAction*, gint)':
/usr/local/src/GARNOME/Devel/garnome-trunk/include/glibmm-2.4/glibmm/objectbase.h:149: error: 'bool Glib::ObjectBase::is_derived_() const' is protected
action.cc:279: error: within this context
/usr/local/src/GARNOME/Devel/garnome-trunk/include/glibmm-2.4/glibmm/objectbase.h: In static member function 'static gboolean Atk::Action_Class::set_description_vfunc_callback(AtkAction*, gint, const gchar*)':
/usr/local/src/GARNOME/Devel/garnome-trunk/include/glibmm-2.4/glibmm/objectbase.h:149: error: 'bool Glib::ObjectBase::is_derived_() const' is protected
Comment 1 Murray Cumming 2007-04-18 16:06:15 UTC
gtkmm 2.10.9 requires glibmm 2.12.8, in which Glib::ObjectBase::is_derived_() is public, and checks for glibmm 2.12.8 in configure. Do you have glibmm 2.12.8?
Comment 2 Joseph Sacco 2007-04-18 17:43:13 UTC
Murray,

I am running the latest GARNOME-2.18.x, which contains:

   * platform/glib-2.13.0
   * bindings/glibmm-2.13.3


-Joseph
Comment 3 Murray Cumming 2007-04-18 18:59:56 UTC
Ah, glibmm 2.13 is not part of GNOME 2.18, and not stable. But I will do a new glibmm 2.13 release to help people avoid this problem.
Comment 4 Joseph Sacco 2007-04-18 19:20:47 UTC
Murray,

Thanks for the quick response.  When glibxx-2.13.x is available, I will test and update the development branch of GARNOME. 

For now, I will back down the versions in the GNOME-2-18 branch of GARNOME. 

-Joseph
Comment 5 Murray Cumming 2007-04-24 10:04:19 UTC
I released 2.13.4 which should fix this. Do remember to use the latest 2.12.x version for stable versions.
Comment 6 Joseph Sacco 2007-04-24 14:12:05 UTC
Thank you, Murray. 

-Joseph