Downgrade to 2.12.8. The 2.13.x version is a development version. The update of gtkmm to 2.10.9 doesn't build with glibmm 2.13.x. Bump the PORTEPOCH.

GNOME Bugzilla:	http://bugzilla.gnome.org/show_bug.cgi?id=430782
Discussed with:	marcus