devel/glibmm/files/patch-glib_glibmm_date.cc
@@ -1,16 +1,19 @@
---- glib/glibmm/date.cc.orig	Mon Feb  6 00:50:58 2006
-+++ glib/glibmm/date.cc	Mon Feb  6 00:51:32 2006
-@@ -72,12 +72,14 @@ void Date::set_parse(const Glib::ustring
- }
+--- glib/glibmm/date.cc.orig	Sun Apr 22 12:28:36 2007
++++ glib/glibmm/date.cc	Sun Apr 22 12:28:48 2007
+@@ -73,7 +73,7 @@
+ 
  
  #ifndef GLIBMM_DISABLE_DEPRECATED
+-
 +#if GLIB_SIZEOF_LONG != 4 && !defined(__alpha__)
  
- void Date::set_time(GTime time)
- {
-   //This method, and the C function that it wraps, are deprecated.
+ //Avoid a build problem in the case that time_t is equivalent to guint32 (GTime is also guint32)
+ //That would make the set_time() method overload impossible.
+@@ -84,7 +84,7 @@
    g_date_set_time(&gobject_, time);
  }
+ #endif //GLIBMM_HAVE_C_STD_TIME_T_IS_NOT_INT32
+-
 +#endif
  #endif // GLIBMM_DISABLE_DEPRECATED
  
